feat: add organisation workspace
